vulkan tutorial > uniform buffer

--- a/VulkanTest/VulkanTest.vcxproj
+++ b/VulkanTest/VulkanTest.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\stb</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\stb</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -124,7 +124,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\stb</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -142,7 +142,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.275.0\Include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glfw-3.3.9.bin.WIN64\glfw-3.3.9.bin.WIN64\include;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\glm-0.9.9.8\glm;C:\Users\Sasa\Documents\Visual Studio 2019\Libraries\stb</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
